labs/session-03-ingress/solution/middleware-ratelimit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit-tim  # Remplacez tim par votre prenom
  namespace: exercices
spec:
  rateLimit:
    average: 100
    burst: 200
