labs/session-03-ingress/solution/api-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingressroute-tim  # Remplacez tim par votre prenom
  namespace: exercices
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api-tim.training.test`)
      kind: Rule
      services:
        - name: api-tim
          port: 80
