labs/session-03-ingress/solution/frontend-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: exercices
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`frontend.training.local`)
      kind: Rule
      services:
        - name: frontend
          port: 80
